 - GBA BIOS: Fix reloading video registers after reset (fixes mgba.io/i/1808)
 - GBA DMA: Linger last DMA on bus (fixes mgba.io/i/301 and mgba.io/i/1320)
 - GBA Memory: Improve gamepak prefetch timing
 - GBA Memory: Stall on VRAM access in mode 2 (fixes mgba.io/i/190)
 - GBA Savedata: Fix potential corruption when loading a 1Mbit flash save
 - GBA SIO: Fix copying Normal mode transfer values
 - GBA Video: Latch scanline at end of Hblank (fixes mgba.io/i/1319)
 - GBA Video: Fix Hblank timing
 - GBA Video: Fix invalid read in mode 4 mosaic
 - GBA Video: Fix color of disabled screen
 - SM83: Emulate HALT bug
 - SM83: Fix flags on little endian PowerPC
Other fixes:
 - 3DS: Fix garbage on borders of scaled screens
 - All: Improve export headers (fixes mgba.io/i/1738)
 - All: Correct format strings for some numbers on Windows (fixes mgba.io/i/1794)
 - All: Correct more format strings on Windows (fixes mgba.io/i/1817)
 - ARM: Fix decoder detection of branches with ALU and LDR instrctions
 - CMake: Fix build with libzip 1.7
 - Core: Ensure ELF regions can be written before trying
 - Debugger: Don't skip undefined instructions when debugger attached
 - FFmpeg: Fix some small memory leaks
 - FFmpeg: Fix encoding of time base
 - GB Core: Fix extracting SRAM when none is present
 - GBA: Fix leak if attempting to load BIOS multiple times
 - GBA Memory: Fix instability on Wii when using AGBPrint
 - GBA Savedata: Fix extracting save when not yet configured in-game
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix file handle leak on opening an invalid ROM
 - Qt: Fix a race condition in the frame inspector
 - Qt: Fix Italian RTC translation (fixes mgba.io/i/1798)
 - Qt: Add missing option for Wisdom Tree in overrides list
 - Util: Fix crash if PNG header fails to write
 - SM83: Simplify register pair access on big endian
 - Vita: Fix flickering when using frameskip (fixes mgba.io/i/1822)